Fix circles overflowing body element

--- a/src/sass/partials/_reviews.scss
+++ b/src/sass/partials/_reviews.scss
@@ -21,6 +21,7 @@
   .circle {
     width: 200px;
     height: 200px;
+    overflow: hidden;
   }
 
   .stroke {
